--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -25,8 +25,16 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Test
-        working-directory: ./back-end # Change to the back-end directory
-        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
+        working-directory: ./back-end
+        run: |
+          docker-compose up -d db  # Start db in detached mode
+          docker-compose run --rm app sh -c "
+            until pg_isready -h db -p 5432 -U devuser; do
+              echo 'Waiting for PostgreSQL...';
+              sleep 1;
+            done &&
+            python manage.py wait_for_db &&
+            python manage.py test"
 
       - name: Lint
         working-directory: ./back-end # Change to the back-end directory
