--- a/front-end/ashtray_meny/pubspec.yaml
+++ b/front-end/ashtray_meny/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
   logger: ^2.4.0
+  provider: ^6.1.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
